--- a/birdclef_2023.ipynb
+++ b/birdclef_2023.ipynb
@@ -1120,7 +1120,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Fine-tune the whole model\n",
+        "# Set callbacks\n",
         "early_stopping=EarlyStopping(patience=5, monitor='val_categorical_accuracy', verbose=1)\n",
         "checkpointer=ModelCheckpoint(filepath='model.h5', monitor='val_categorical_accuracy', save_best_only=True, verbose=1)"
       ],
@@ -1225,7 +1225,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# run best model on test dataset\n",
+        "# Run best model on test dataset\n",
         "model = load_model('model.h5')\n",
         "test_err = model.evaluate(test_dataset)"
       ],
@@ -1252,7 +1252,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ+UTRNpi/N0X3N72y3ZOR",
+      "authorship_tag": "ABX9TyPj7dZLiF9gCBBe3UKjbpj7",
       "include_colab_link": true
     },
     "kernelspec": {
